--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Joaquin Cejas",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "bcryptjs": "^2.4.3",
     "commander": "^12.1.0",
     "connect-mongo": "^5.1.0",
