--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ DB_USERNAME=
 DB_PASSWORD=
 PORT=
 JWT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL=
+NODE_ENV=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
